--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
